--- a/.github/workflows/cloud_build.yml
+++ b/.github/workflows/cloud_build.yml
@@ -9,10 +9,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup Java
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
@@ -26,12 +26,12 @@ jobs:
         run: |
           # البحث عن ملف المشروع وبنائه
           PROJECT_ROOT=$(find . -name pubspec.yaml -exec dirname {} \;)
-          cd $PROJECT_ROOT
+          cd "$PROJECT_ROOT"
           flutter pub get
           flutter build apk --release
 
       - name: Deliver APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: WABIR-Quran-App
           path: "**/build/app/outputs/flutter-apk/app-release.apk"
