Add cache clean step before APK build
Clean Flutter pub cache before building APK.

--- a/.github/workflows/cloud_build.yml
+++ b/.github/workflows/cloud_build.yml
@@ -24,9 +24,9 @@ jobs:
 
       - name: Build APK
         run: |
-          # البحث عن ملف المشروع وبنائه
           PROJECT_ROOT=$(find . -name pubspec.yaml -exec dirname {} \;)
           cd "$PROJECT_ROOT"
+          flutter pub cache clean --force
           flutter pub get
           flutter build apk --release
 
