--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,32 +1,32 @@
 name: quran_app
-description: "WABIR Quran Gateway - Premium App"
+description: "WABIR Quran Gateway"
 publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  provider: ^6.1.1
-  just_audio: ^0.9.36
-  shared_preferences: ^2.2.2
-  adhan: ^2.1.0
-  geolocator: ^12.0.0
-  flutter_qibla: ^0.7.1
-  google_fonts: ^6.1.0
-  intl: ^0.19.0
-  http: ^1.2.0
-  flutter_local_notifications: ^16.3.3
-  timezone: ^0.9.2
+  provider: any
+  just_audio: any
+  shared_preferences: any
+  adhan: any
+  geolocator: any
+  flutter_qibla: 0.7.1
+  google_fonts: any
+  intl: any
+  http: any
+  flutter_local_notifications: any
+  timezone: any
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: any
 
 flutter:
   uses-material-design: true
