--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: quran_app
-description: "WABIR Quran Gateway - Premium App"
+description: "WABIR Quran Gateway - Final Build"
 publish_to: 'none'
 version: 1.0.0+1
 
@@ -16,11 +16,11 @@ dependencies:
   shared_preferences: ^2.2.2
   adhan: ^2.1.0
   geolocator: ^11.0.0
-  flutter_qibla: ^0.7.1
+  flutter_compass: ^0.7.0
   google_fonts: ^6.1.0
   intl: ^0.19.0
   http: ^1.2.0
-  flutter_local_notifications: ^16.3.3
+  flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
 
 dev_dependencies:
