--- a/.github/workflows/cloud_build.yml
+++ b/.github/workflows/cloud_build.yml
@@ -24,11 +24,10 @@ jobs:
 
       - name: Force Fix Project Structure
         run: |
-          # العثور على المجلد والبدء من الصفر
           PROJECT_ROOT=$(find . -name pubspec.yaml -exec dirname {} \;)
           cd "$PROJECT_ROOT"
           
-          # إنشاء ملف pubspec.yaml جديد ونظيف تماماً لضمان عدم وجود تعارضات
+          # إنشاء ملف pubspec.yaml بإصدارات محددة ومستقرة جداً لضمان النجاح
           cat <<EOF > pubspec.yaml
           name: quran_app
           description: "WABIR Quran Gateway"
@@ -41,26 +40,30 @@ jobs:
               sdk: flutter
             flutter_localizations:
               sdk: flutter
-            provider: any
-            just_audio: any
-            shared_preferences: any
-            adhan: any
-            geolocator: any
-            flutter_compass: any
-            google_fonts: any
-            intl: any
-            http: any
-            flutter_local_notifications: any
-            timezone: any
+            provider: ^6.1.1
+            just_audio: ^0.10.0
+            shared_preferences: ^2.2.0
+            adhan: ^2.1.0
+            geolocator: ^11.0.0
+            flutter_compass: ^0.7.0
+            google_fonts: ^6.1.0
+            intl: ^0.19.0
+            http: ^1.2.0
+            flutter_local_notifications: 17.2.2
+            timezone: 0.9.4
           dev_dependencies:
             flutter_test:
               sdk: flutter
-            flutter_lints: any
+            flutter_lints: ^3.0.1
           flutter:
             uses-material-design: true
+            fonts:
+              - family: AmiriQuran
+                fonts:
+                  - asset: assets/fonts/AmiriQuran.ttf
           EOF
 
-          # إعادة إنشاء ملفات الأندرويد لدمج الإعدادات الجديدة
+          # تنظيف أي أخطاء سابقة وإعادة بناء هيكل الأندرويد
           flutter create . --platforms android --org com.wabir.quran
           
           # قبول التراخيص
